# coldestgame

./: .gitignore  ALBuffer.cpp  ALBuffer.h  ALSource.cpp  ALSource.h  Bot.cpp  Bot.h  BotNetCode.cpp  BotNetCode.h  Button.cpp  CMakeLists.txt  Camera.cpp  Camera.h  ClientMap.cpp  ClientMap.h  ClientNetCode.cpp  ClientNetCode.h  ColdestDedicatedConsole.py  CollisionDetection.cpp  CollisionDetection.h  ComboBox.h  Console.cpp  Console.h  Doxyfile  DynamicObject.cpp  DynamicObject.h  DynamicPrimitive.cpp  DynamicPrimitive.h  FBO.cpp  FBO.h  GUI.cpp  GUI.h  GenericPrimitive.cpp  GenericPrimitive.h  GraphicMatrix.cpp  GraphicMatrix.h  Hit.cpp  Hit.h  IDGen.cpp  IDGen.h  (+204 more)
cmake/: FindALUT.cmake  FindOpenAL.cmake  FindOpenGL.cmake  FindSDL_image.cmake  FindSDL_net.cmake  FindSDL_ttf.cmake  FindVorbis.cmake  FindXercesC.cmake
fonts/: Futured.txt  ReadMe.txt
gui/: Button.cpp  Button.h  ComboBox.cpp  ComboBox.h  Font.cpp  Font.h  FontCache.cpp  FontCache.h  GUI.cpp  GUI.h  Layout.cpp  Layout.h  LineEdit.cpp  LineEdit.h  ProgressBar.cpp  ProgressBar.h  ScrollView.cpp  ScrollView.h  Slider.cpp  Slider.h  TabWidget.cpp  TabWidget.h  Table.cpp  Table.h  TableItem.cpp  TableItem.h  TextArea.cpp  TextArea.h  XSWrapper.cpp  XSWrapper.h  chat.xml  console.xml  credits.xml  editobject.xml  editormain.xml  endgame.xml  hostsetup.xml  hud.xml  ingamestatus.xml  loadout.xml  (+7 more)
items/: ammocarrier  armor  base  heatsink  spawn
maps/: base.map  bigtest.map  craters.map  craters.path  diamond.map  diamond.path  leapfrog.map  maintest.map  manytreetest.map  maplist  mini.map  newtest.map  oldtest.map  oneway.map  oneway.path  ramps.map  ramps.path  real.map  riverside.map  riverside.path  riverside.xcf  riversidewinter.map  riversidewinter.path  smalltest.map  tears.map  tears.path  template.map  test.map  test.path
materials/: bark  default  explosion  grass  impostor  laser  leaves  leaves1  projectile  shadowgen  sky  stars  terrain  test  ui  water
materials/foliage/: bushleaves  orangeflowers  purpleflowers  tropicalleaf  tropicalstem
materials/metal/: baremetal  base  hips  legs  plate  rusty  spawn  torso
materials/misc/: building  enemyindicator  sighthit
materials/terrain/: base1  base2  base3  base4  base5  base6  basic  riverside  snowy  tropical
materials/tracers/: autocannon  gauss  laser  sight  smoke
modeller/: GLPreview.cpp  GLPreview.h  GraphicMatrix.cpp  GraphicMatrix.h  IniReader.cpp  IniReader.h  Makefile  Material.cpp  Material.h  Primitive.cpp  Primitive.h  Quad.cpp  Quad.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  TextureHandler.cpp  TextureHandler.h  TextureManager.cpp  TextureManager.h  Triangle.cpp  Triangle.h  Vector3.cpp  Vector3.h  Vertex.cpp  Vertex.h  glinc.h  globals.h  main.cpp  mainform.cpp  mainform.h  mainform.ui  mainform.ui.h  moc_GLPreview.cpp  moc_mainform.cpp  moc_trivertselection.cpp  modeller  modeller.pro  trivertselection.cpp  (+4 more)
models/: test  testex
models/autocannon/: frame0000
models/base/: base  frame0000
models/building/: building.matmap  building.mtl  untitled.mtl
models/bush/: base  bush.blend  bush.blend1  bush.matmap  frame0000
models/empty/: base
models/enemyindicator/: base  frame0000
models/explosion/: base  frame0000  frame0001  frame0002  frame0003  frame0004
models/gauss/: frame0000
models/grass/: base  frame0000
models/impostor/: base  frame0000
models/laser/: base  frame0000
models/oldimpostor/: base  frame0000
models/oldprojectile/: base  frame0000
models/orangeflowers/: frame0000
models/projectile/: base  frame0000
models/purpleflowers/: frame0000
models/sight/: base  frame0000
models/sighthit/: base  frame0000
models/smoke/: frame0000  frame0001  (+1 more)
old/: GenShadowsPSM  GetMap  PrimitiveOctree.cpp  PrimitiveOctree.h  frustumdebug  smoothnoise
particles/: debris  explosion  none  sighthit
shaders/: alphafogfrag.glsl  basiclighting.glsl  blur  bump  bumpfrag.glsl  bumpvert.glsl  cloud  cloudgen  cloudgenfrag.glsl  cloudgenvert.glsl  flat  flatfrag.glsl  flatvert.glsl  fogfrag.glsl  foliage  foliagefrag.glsl  noise  noise.glsl  noisevert.glsl  noshadowfrag.glsl  reflectionfrag.glsl  reflectionvert.glsl  shadow  shadowfrag.glsl  shadowmap  shadowmapfrag.glsl  shadowmapvert.glsl  shadowvert.glsl  softshadowfrag.glsl  specularfrag.glsl  standard  standardfrag.glsl  standardnoshadow  standardvert.glsl  terrain  terrain1  terrain1frag.glsl  terrain2  terrain2frag.glsl  terrain3  (+14 more)
sounds/: credits.txt
stylesheets/: stylesheet.css
textures/: leaves.xcf  pineleaves.xcf  sky.xcf
units/: nemesis  omega  ultra
weapons/: autocannon  gauss  laser  machinegun  mortar  neutrino  railgun  rocket  sight
web/: authenticate.inc  command.inc  config.inc  default.css  getHome  home.inc  index.php  login.inc  start.inc  startServer.sh  stop.inc  util.inc
(+127 files in other folders)
